env/docs: 기존에 추가한 .markdownlint.json 파일 제거 후 markdownlint를 사용해서 README.md 파일 수정

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
     80
   ],
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
+    "source.fixAll.eslint": true,
+    "markdownlint.autoFix": true
   },
   "trailing-spaces.trimOnSave": true
 }
